ocaml/testsuite/tests/typing-layouts/parsing.compilers.reference
type 'a t0 = 'a list
Line 2, characters 11-20:
2 | type ('a : immediate) t0 = 'a list;;
               ^^^^^^^^^
Error: Layout immediate is more experimental than allowed by -extension layouts.
       You must enable -extension layouts_beta to use this feature.
Line 2, characters 11-15:
2 | type ('a : void) t0 = 'a list;;
               ^^^^
Error: Layout void is more experimental than allowed by -extension layouts.
       You must enable -extension layouts_alpha to use this feature.
Line 2, characters 11-15:
2 | type ('a : valu) t0 = 'a list;;
               ^^^^
Error: Unknown layout valu
Line 2, characters 9-15:
2 | type t = float#;;
             ^^^^^^
Error: This construct requires the beta version of the extension "layouts", which is disabled and cannot be used
Line 2, characters 9-13:
2 | type t = int#;;
             ^^^^
Error: Syntax error: Unboxed type other than float# not expected.
Line 2, characters 9-17:
2 | type t = Float.t#;;
             ^^^^^^^^
Error: Syntax error: Unboxed type other than float# not expected.

